--- a/index.html
+++ b/index.html
@@ -1,28 +1,183 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-			</ul>
-		</footer>
-	</body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Anik De - Profile</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background: #f4f4f4;
+            color: #333;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            overflow: hidden;
+        }
+        header {
+            background: #333;
+            color: #fff;
+            padding-top: 30px;
+            min-height: 70px;
+            border-bottom: #77aaff 3px solid;
+            text-align: center;
+        }
+        header h1 {
+            margin: 0;
+            padding: 0;
+        }
+        header ul {
+            padding: 0;
+            list-style: none;
+        }
+        header li {
+            display: inline;
+            padding: 0 20px 0 20px;
+        }
+        header a {
+            color: #fff;
+            text-decoration: none;
+            text-transform: uppercase;
+            font-size: 16px;
+        }
+        .profile-picture {
+            width: 300px;
+            height: 300px;
+            border-radius: 60%;
+            margin-top: 2px;
+            border: 5px solid #fff;
+        }
+        .showcase {
+            min-height: 300px;
+            background: url('showcase.jpg') no-repeat center center/cover;
+            text-align: center;
+            color: #fff;
+        }
+        .showcase h1 {
+            margin-top: 100px;
+            font-size: 55px;
+            margin-bottom: 10px;
+        }
+        .showcase p {
+            font-size: 20px;
+        }
+        .content {
+            padding: 20px;
+            background: #fff;
+        }
+        .section {
+            padding: 20px;
+            border-bottom: #e4e4e4 1px solid;
+        }
+        .section:last-child {
+            border: none;
+        }
+        .footer {
+            text-align: center;
+            padding: 20px;
+            background: #333;
+            color: #fff;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <div class="container">
+            <img src="profile.jpg" alt="Anik De" class="profile-picture">
+            <h1>Anik De</h1>
+            <ul>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#activities">Activities</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </header>
+    
+    <div class="showcase">
+        <div class="container">
+            <h1>Welcome to My Profile</h1>
+            <p>Passionate about Computer Vision and Machine Learning</p>
+        </div>
+    </div>
+
+    <div class="container">
+        <div id="about" class="section">
+            <h2>About Me</h2>
+            <p>Passionate about computer vision and perception. Committed to achieving competitive results and staying updated with state-of-the-art technology.</p>
+        </div>
+        <div id="skills" class="section">
+            <h2>Skills</h2>
+            <h3>Programming</h3>
+            <p>Python, C/C++, Git, GDB, CMake, LATEX, PHP, MySQL</p>
+            <h3>Libraries</h3>
+            <p>Tensorflow, Pytorch, OpenCV, scikit-learn, Jupyter</p>
+            <h3>Application</h3>
+            <p>Linux, Webots (Robot simulator), Docker, Miniconda, ISIS Proteus Simulator</p>
+            <h3>Hardware</h3>
+            <p>8051 (microcontroller), 8085 (microprocessor), Raspberry Pi 4, NodeMCU</p>
+        </div>
+        <div id="experience" class="section">
+            <h2>Experience</h2>
+            <h3>IIT Jodhpur | Research Assistant</h3>
+            <p>Dec 2022 - Ongoing | Jodhpur, Rajasthan, IN</p>
+            <p>Research on multi-modal architectures to interpret different kinds of documents and images, focusing on Document AI, Scene Text Recognition, NLU, and Computer Vision.</p>
+            <h3>IIIT Manipur | Summer Intern</h3>
+            <p>June 2019 – July 2019 | Imphal, Manipur, IN</p>
+            <p>Project: Prototyped an autonomous self-driving car navigating around a confined space.</p>
+        </div>
+        <div id="education" class="section">
+            <h2>Education</h2>
+            <h3>Assam University</h3>
+            <p>MTech in Computer Science, Sept 2023 | Silchar, Assam, India</p>
+            <p>CGPA: 7.68 / 10</p>
+            <h3>N.E.R.I.S.T</h3>
+            <p>BTech in Electronics and Communication, Aug 2020 | Nirjuli, Arunachal Pradesh, India</p>
+            <p>CGPA: 7.35 / 10.0</p>
+            <h3>Vivekananda Kendra Vidyalaya</h3>
+            <p>High School, April 2014 | Doyang, Nagaland, India</p>
+            <p>CGPA: 9.2 / 10.0</p>
+        </div>
+        <div id="projects" class="section">
+            <h2>Projects</h2>
+            <h3>Master Thesis | COVID-19 Diagnosis using Quantum Deep Learning</h3>
+            <p>Sept 2021 - Sept 2023</p>
+            <p>Developed a classification system for diagnosing COVID-19 and pneumonia from medical lung images. Utilized fine-tuned pre-trained CNN models for feature extraction and implemented a Rotation Entangled Parameterized Circuit to optimize the solution.</p>
+            <h3>Graduation Project | Autonomous Vehicle Navigation System</h3>
+            <p>Oct 2019 - June 2020</p>
+            <p>Implemented SLAM by multi-sensor fusion using Kalman Filter, and modeled kinematics for differential drive for PID motion control. Deployed and tested in Webots robotic simulator.</p>
+            <h3>2nd Year Project | Obstacle Detection System for Visually Impaired</h3>
+            <p>Jan 2018 – May 2018</p>
+            <p>Created a system to detect obstacles within a range of 5 meters and provide directions to the blind person through an integrated audio system using Arduino and APR33A3.</p>
+        </div>
+        <div id="activities" class="section">
+            <h2>Activities</h2>
+            <ul>
+                <li>2nd prize at Robowar Competition at college level in 2015</li>
+                <li>General Secretary of NERIST Electronic Society (NES) 2018-19</li>
+                <li>Member of organizing committee for several cultural events at college</li>
+            </ul>
+        </div>
+        <div id="contact" class="section">
+            <h2>Contact</h2>
+            <p>Email: <a href="mailto:anekde@gmail.com">anekde@gmail.com</a></p>
+            <p>Phone: 8837058719</p>
+            <p>Location: Kailashahar, Tripura, India</p>
+            <p>Github: <a href="https://github.com/anikde">https://github.com/anikde</a></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/anik-de">https://www.linkedin.com/in/anik-de</a></p>
+        </div>
+    </div>
+    
+    <footer class="footer">
+        <p>&copy; 2024 Anik De. All rights reserved.</p>
+    </footer>
+</body>
 </html>
+
