Formatted Experience Section

--- a/index.html
+++ b/index.html
@@ -126,12 +126,44 @@
         </div>
         <div id="experience" class="section">
             <h2>Experience</h2>
-            <h3>IIT Jodhpur | Research Assistant</h3>
-            <p>Dec 2022 - Ongoing | Jodhpur, Rajasthan, IN</p>
-            <p>Research on multi-modal architectures to interpret different kinds of documents and images, focusing on Document AI, Scene Text Recognition, NLU, and Computer Vision.</p>
-            <h3>IIIT Manipur | Summer Intern</h3>
-            <p>June 2019 – July 2019 | Imphal, Manipur, IN</p>
-            <p>Project: Prototyped an autonomous self-driving car navigating around a confined space.</p>
+            <div class="experience-item">
+                <h3>Senior Project Engineer (CV | NLU) - IIT Jodhpur</h3>
+                <p>Jun 2024 - Present</p>
+                <p>Department of Computer Science and Engineering, IIT Jodhpur</p>
+                <ul>
+                    <li>Developing synthetic data for image generation to enhance model training processes.</li>
+                    <li>Building and enhancing state-of-the-art recognition engines for diverse applications.</li>
+                    <li>Conducting document layout analysis using advanced transformer-based architectures.</li>
+                    <li>Designing robust retrieval systems for chart data.</li>
+                </ul>
+            </div>
+            <div class="experience-item">
+                <h3>Research Assistant - IIT Jodhpur</h3>
+                <p>Jul 2023 - Jun 2024</p>
+                <p>Department of Computer Science and Engineering, IIT Jodhpur</p>
+                <ul>
+                    <li>Built transformer-based model for visual question answering as a proof-of-concept for various image data analysis tasks.</li>
+                    <li>Developed graph neural network model for object detection in images.</li>
+                </ul>
+            </div>
+            <div class="experience-item">
+                <h3>Junior Research Assistant - IIT Jodhpur</h3>
+                <p>Dec 2022 - Mar 2023</p>
+                <p>Department of Computer Science and Engineering, IIT Jodhpur</p>
+                <ul>
+                    <li>Implemented image retrieval using Siamese transformer network.</li>
+                    <li>Conducted document image analysis including segmentation, skew estimation, and layout analysis.</li>
+                    <li>Engaged in data engineering on document images, including image correction and semi-automatic annotation.</li>
+                </ul>
+            </div>
+            <div class="experience-item">
+                <h3>Summer Intern - IIIT Manipur</h3>
+                <p>June 2019 – July 2019</p>
+                <p>Imphal, Manipur, IN</p>
+                <ul>
+                    <li>Prototyped an autonomous self-driving car navigating around a confined space.</li>
+                </ul>
+            </div>
         </div>
         <div id="education" class="section">
             <h2>Education</h2>
