Changed bio color

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
     
     <div class="showcase">
         <div class="container">
-            <h1>Welcome to My Profile</h1>
-            <p>Passionate about Computer Vision and Machine Learning</p>
+            <h1 style="color: #000000;">Welcome to My Profile</h1>
+            <p style="color: #000000;">Passionate about Computer Vision and Deep Learning</p>
         </div>
     </div>
 
