--- a/index.html
+++ b/index.html
@@ -103,16 +103,16 @@
     
     <div class="showcase">
         <div class="container">
-            <h1 style="color: #000000;">Welcome to My Profile</h1>
-            <p style="color: #000000;">Passionate about Computer Vision and Deep Learning</p>
+            <h1 style="color: #000000;">Hi, I am Anik </h1>
+            <p style="color: #000000;">Passionate about Computer Vision and Deep Learning. Committed to achieving competitive results and staying updated with state-of-the-art technology</p>
         </div>
     </div>
 
     <div class="container">
-        <div id="about" class="section">
+        <!-- <div id="about" class="section">
             <h2>About Me</h2>
             <p>Passionate about computer vision and perception. Committed to achieving competitive results and staying updated with state-of-the-art technology.</p>
-        </div>
+        </div> -->
         <div id="skills" class="section">
             <h2>Skills</h2>
             <h3>Programming</h3>
